--- a/beadando.tex
+++ b/beadando.tex
@@ -175,5 +175,9 @@ Elsőként betöltjük az adatokat. Mivel a vizsgált oszlopok nem szortultak ja
 \end{center}
 \end{figure}
 
+A kapott p-érték alapján elutasíthatjuk azt a hipotézist amely szerint a kreativitás pontszámok és a kognitív rugalmasság teszten elért eredmények azonos eloszlásból származnak. Ennek a döntésnek a helyességét szemléltetik az alábbi hisztogrammok is, amelyek rendre a kognitív rugalmasság illetve a kreativitás pontszámok eloszlásait ábrázolják.
+
+
+\section*{}
 
 \end{document}
