--- a/beadando.tex
+++ b/beadando.tex
@@ -178,6 +178,12 @@ Elsőként betöltjük az adatokat. Mivel a vizsgált oszlopok nem szortultak ja
 A kapott p-érték alapján elutasíthatjuk azt a hipotézist amely szerint a kreativitás pontszámok és a kognitív rugalmasság teszten elért eredmények azonos eloszlásból származnak. Ennek a döntésnek a helyességét szemléltetik az alábbi hisztogrammok is, amelyek rendre a kognitív rugalmasság illetve a kreativitás pontszámok eloszlásait ábrázolják.
 
 
+\begin{figure}[htb!] \label{fig:eredetiVSsajat}
+  \centering
+\subfigure[]{\includegraphics[width=65mm]{./Abrak/histKog.jpg}}
+\subfigure[]{\includegraphics[width=65mm]{./Abrak/histKreat.jpg}}
+\end{figure}
+
 \section*{}
 
 \end{document}
